workloads-load-tests/product-4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-4
  labels:
    pkz.test: "true"
    pkz.product: product-4
