workloads-load-tests/product-4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: product-4
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
