workloads-load-tests/product-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: product-4
spec:
  ingressClassName: nginx
  rules:
    - host: product-4.pkz.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
